// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form accessibility Box with TextInput in Form should
  have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              aria-label="test"
              autocomplete="off"
              class="c5"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility CheckBox in Form should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c3:hover input:not([disabled])+div,
.c3:hover input:not([disabled])+span {
  border-color: #000000;
}

.c6 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c6:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c5 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <label
          class="c3"
        >
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              type="checkbox"
            />
            <div
              class="c7 "
            />
          </div>
          <span>
            test
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility FormField with an explicit TextInput child
  should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            aria-label="test"
            autocomplete="off"
            class="c4"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility Select in Form should have no accessibility violations 1`] = `
.c10 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c10 *[stroke*='#'],
.c10 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*='#'],
.c10 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  flex-basis: auto;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  border: none;
  outline: none;
  border: none;
}

.c7::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c7::-moz-placeholder {
  color: #AAAAAA;
}

.c7:-ms-input-placeholder {
  color: #AAAAAA;
}

.c7 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c7:-moz-placeholder,
.c7::-moz-placeholder {
  opacity: 1;
}

.c6 {
  position: relative;
  width: 100%;
}

.c8 {
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="test"
          class="c3 "
          type="button"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <input
                  aria-label="test"
                  autocomplete="off"
                  class="c7 c8"
                  inert=""
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="c9"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="c10"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility TextInput in Form should have
  no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            aria-label="test"
            autocomplete="off"
            class="c4"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form uncontrolled dynamically removed fields should be removed from form value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c6:hover input:not([disabled])+div,
.c6:hover input:not([disabled])+span {
  border-color: #000000;
}

.c9 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c9:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c8 {
  flex-shrink: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="name"
            placeholder="test name"
          />
        </div>
      </div>
    </div>
    <div
      class="c1 "
    >
      <div
        class="c5 "
      >
        <label
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <input
              class="c9"
              name="toggle"
              type="checkbox"
            />
            <div
              class="c10 "
            />
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    <button
      class="c11"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled dynamically removed fields should be removed from form value 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="name"
            placeholder="test name"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dpvfKN FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 hJexaG"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gCGMUC StyledCheckBox-sc-1dbk5ju-6 kMcDgp"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 eNyPOw"
              name="toggle"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kFwNfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cypHTx"
            />
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled dynamicly removed fields using blur validation
  don't keep validation errors 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c6:hover input:not([disabled])+div,
.c6:hover input:not([disabled])+span {
  border-color: #000000;
}

.c9 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c9:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c8 {
  flex-shrink: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="name"
            placeholder="test name"
          />
        </div>
      </div>
    </div>
    <div
      class="c1 "
    >
      <div
        class="c5 "
      >
        <label
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <input
              class="c9"
              name="toggle"
              type="checkbox"
            />
            <div
              class="c10 "
            />
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    <button
      class="c11"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled dynamicly removed fields using blur validation
  don't keep validation errors 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="name"
            placeholder="test name"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dpvfKN FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 hJexaG"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gCGMUC StyledCheckBox-sc-1dbk5ju-6 kMcDgp"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 eNyPOw"
              name="toggle"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 SUcZR StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cypHTx"
            >
              .c0 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<svg
                class="c0"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    .c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c2 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c0 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
      class="c0 "
    >
      <div
        class="c1 "
      >
        <div
          class="c2"
        >
          <input
            autocomplete="off"
            class="c3"
            name="mood"
            placeholder="test mood"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled dynamicly removed fields using blur validation
  don't keep validation errors 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="name"
            placeholder="test name"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dpvfKN FormField__FormFieldContentBox-sc-m9hood-1 cwAnbn"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 GHdig"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gCGMUC StyledCheckBox-sc-1dbk5ju-6 kMcDgp"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 eNyPOw"
              name="toggle"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kFwNfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cypHTx"
            />
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled empty 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <form />
</div>
`;

exports[`Form uncontrolled empty outside of grommet wrapper 1`] = `<form />`;

exports[`Form uncontrolled errors 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #EB0000;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px #EB0000;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="c4"
            name="test"
          />
        </div>
      </div>
      <span
        class="c5"
      >
        missing
      </span>
    </div>
  </form>
</div>
`;

exports[`Form uncontrolled infos 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
          />
        </div>
      </div>
      <span
        class="c5"
      >
        missing
      </span>
    </div>
  </form>
</div>
`;

exports[`Form uncontrolled regexp validation 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
  class="c0"
>
  invalid
</span>
`;

exports[`Form uncontrolled regexp validation with status 1`] = `
[
  .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
    class="c0"
  >
    invalid
  </span>,
  .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
    class="c0"
  >
    invalid
  </span>,
]
`;

exports[`Form uncontrolled required validation 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
  class="c0"
>
  required
</span>
`;

exports[`Form uncontrolled reset clears select, checkbox, radiobuttongroup 1`] = `
.c11 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  flex-basis: auto;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c23 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 100%;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c26 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 100%;
}

.c25 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c18 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c13 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c13:hover input:not([disabled])+div,
.c13:hover input:not([disabled])+span {
  border-color: #000000;
}

.c16 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c16:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c15 {
  flex-shrink: 0;
}

.c20 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c20:hover input:not([disabled])+div,
.c20:hover input:not([disabled])+span {
  border-color: #000000;
}

.c22 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c27 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  transform: scale(1);
}

.c24 {
  transform: scale(1);
}

.c2 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c4:focus:not(:focus-visible) >circle,
.c4:focus:not(:focus-visible) >ellipse,
.c4:focus:not(:focus-visible) >line,
.c4:focus:not(:focus-visible) >path,
.c4:focus:not(:focus-visible) >polygon,
.c4:focus:not(:focus-visible) >polyline,
.c4:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c4:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c28 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c28:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c28:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c28:focus >circle,
.c28:focus >ellipse,
.c28:focus >line,
.c28:focus >path,
.c28:focus >polygon,
.c28:focus >polyline,
.c28:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c28:focus ::-moz-focus-inner {
  border: 0;
}

.c28:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c28:focus:not(:focus-visible) >circle,
.c28:focus:not(:focus-visible) >ellipse,
.c28:focus:not(:focus-visible) >line,
.c28:focus:not(:focus-visible) >path,
.c28:focus:not(:focus-visible) >polygon,
.c28:focus:not(:focus-visible) >polyline,
.c28:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c28:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  border: none;
  outline: none;
  border: none;
}

.c8::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c8::-moz-placeholder {
  color: #AAAAAA;
}

.c8:-ms-input-placeholder {
  color: #AAAAAA;
}

.c8 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c8::-moz-focus-inner {
  border: none;
  outline: none;
}

.c8:-moz-placeholder,
.c8::-moz-placeholder {
  opacity: 1;
}

.c7 {
  position: relative;
  width: 100%;
}

.c9 {
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c21 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c23 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c17 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c26 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c25 {
    height: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <label
        class="c2"
        for="test-select"
        id="test-select__label"
      >
        Select Size
      </label>
      <div
        class="c3 "
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="test select; Selected: small"
          aria-labelledby="test-select__input__label"
          class="c4 "
          id="test-select"
          type="button"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c7"
              >
                <input
                  autocomplete="off"
                  class="c8 c9"
                  id="test-select__input"
                  inert=""
                  name="test-select"
                  placeholder="test select"
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value="small"
                />
              </div>
            </div>
            <div
              class="c10"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="c11"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="c1 "
    >
      <label
        class="c2"
        for="test-checkbox"
        id="test-checkbox__label"
      >
        CheckBox
      </label>
      <div
        class="c12 "
      >
        <label
          class="c13"
          for="test-checkbox"
        >
          <div
            class="c14 c15"
          >
            <input
              class="c16"
              id="test-checkbox"
              name="test-checkbox"
              type="checkbox"
            />
            <div
              class="c17 "
            >
              <svg
                class="c18"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <span>
            test-checkbox
          </span>
        </label>
      </div>
    </div>
    <div
      class="c1 "
    >
      <label
        class="c2"
        for="test-radiobuttongroup"
        id="test-radiobuttongroup__label"
      >
        RadioButtonGroup
      </label>
      <div
        class="c12 "
      >
        <div
          class="c19"
          id="test-radiobuttongroup"
          role="radiogroup"
        >
          <label
            class="c20"
            for="test-radiobuttongroup-one"
          >
            <div
              class="c21 "
            >
              <input
                class="c22"
                id="test-radiobuttongroup-one"
                name="test-radiobuttongroup"
                tabindex="-1"
                type="radio"
                value="one"
              />
              <div
                class="c23 c24"
              />
            </div>
            <span
              class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
            >
              one
            </span>
          </label>
          <div
            class="c25"
          />
          <label
            class="c20"
            for="test-radiobuttongroup-two"
          >
            <div
              class="c21 "
            >
              <input
                class="c22"
                id="test-radiobuttongroup-two"
                name="test-radiobuttongroup"
                tabindex="0"
                type="radio"
                value="two"
              />
              <div
                class="c26 c24"
              >
                <svg
                  class="c27"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="6"
                  />
                </svg>
              </div>
            </div>
            <span
              class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
            >
              two
            </span>
          </label>
          <div
            class="c25"
          />
          <label
            class="c20"
            for="test-radiobuttongroup-three"
          >
            <div
              class="c21 "
            >
              <input
                class="c22"
                id="test-radiobuttongroup-three"
                name="test-radiobuttongroup"
                tabindex="-1"
                type="radio"
                value="three"
              />
              <div
                class="c23 c24"
              />
            </div>
            <span
              class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
            >
              three
            </span>
          </label>
        </div>
      </div>
    </div>
    <button
      class="c28"
      type="reset"
    >
      Reset
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled reset clears select, checkbox, radiobuttongroup 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <label
        class="StyledText-sc-1sadyjn-0 glxzPv"
        for="test-select"
        id="test-select__label"
      >
        Select Size
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="test select"
          aria-labelledby="test-select__input__label"
          class="StyledButton-sc-323bzc-0 fBAPqi StyledSelect__StyledSelectDropButton-sc-znp66n-5 jiFWIS"
          id="test-select"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fTVILT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hdXjJl"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 LBzQG StyledSelect__SelectTextInput-sc-znp66n-4 djgtjA"
                  id="test-select__input"
                  inert=""
                  name="test-select"
                  placeholder="test select"
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eHNQYw"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 bHtbkK"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <label
        class="StyledText-sc-1sadyjn-0 glxzPv"
        for="test-checkbox"
        id="test-checkbox__label"
      >
        CheckBox
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 dpvfKN FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 hJexaG"
          for="test-checkbox"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gCGMUC StyledCheckBox-sc-1dbk5ju-6 kMcDgp"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 eNyPOw"
              id="test-checkbox"
              name="test-checkbox"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kFwNfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cypHTx"
            />
          </div>
          <span>
            test-checkbox
          </span>
        </label>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <label
        class="StyledText-sc-1sadyjn-0 glxzPv"
        for="test-radiobuttongroup"
        id="test-radiobuttongroup__label"
      >
        RadioButtonGroup
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 dpvfKN FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hKCfLv"
          id="test-radiobuttongroup"
          role="radiogroup"
        >
          <label
            class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
            for="test-radiobuttongroup-one"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
            >
              <input
                class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                id="test-radiobuttongroup-one"
                name="test-radiobuttongroup"
                tabindex="0"
                type="radio"
                value="one"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 bwbchp"
              />
            </div>
            <span
              class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
            >
              one
            </span>
          </label>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 oSxZH"
          />
          <label
            class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
            for="test-radiobuttongroup-two"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
            >
              <input
                class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                id="test-radiobuttongroup-two"
                name="test-radiobuttongroup"
                tabindex="-1"
                type="radio"
                value="two"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 bwbchp"
              />
            </div>
            <span
              class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
            >
              two
            </span>
          </label>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 oSxZH"
          />
          <label
            class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kORknD"
            for="test-radiobuttongroup-three"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iudayb StyledRadioButton-sc-g1f6ld-5 keMHan"
            >
              <input
                class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jvFKej"
                id="test-radiobuttongroup-three"
                name="test-radiobuttongroup"
                tabindex="-1"
                type="radio"
                value="three"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 kRQUWV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 bwbchp"
              />
            </div>
            <span
              class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
            >
              three
            </span>
          </label>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="reset"
    >
      Reset
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled onValidate 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled onValidate 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eopMKM FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
      .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
        class="c0"
      >
        required
      </span>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled onValidate custom error 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled onValidate custom error 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eopMKM FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
      .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
        class="c0"
      >
        One uppercase letter
      </span>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled onValidate custom info 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled onValidate custom info 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 cBoJUe"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 bJKUjK FormField__FormFieldBox-sc-m9hood-0 bDnNjI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekdXJk FormField__FormFieldContentBox-sc-m9hood-1 ioqNEM"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ddykB"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 cxKzl"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
      .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
        class="c0"
      >
        One uppercase letter
      </span>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 bUtOZH"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled update 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
          />
        </div>
      </div>
    </div>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test2"
            placeholder="test-2 input"
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled validate 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
  class="c0"
>
  simple string
</span>
`;

exports[`Form uncontrolled validate 2`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
  class="c0"
>
   ReactNode 
</span>
`;

exports[`Form uncontrolled validate 3`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
  class="c0"
>
  status error
</span>
`;

exports[`Form uncontrolled validate 4`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
  class="c0"
>
  status info
</span>
`;

exports[`Form uncontrolled with field 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
